Don't leak from setup scripts